--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -443,8 +443,8 @@
         deployment_config:
           form_factor: "{{item.edge_vm_size|upper}}"
           node_user_settings:
-            cli_password: "{{ edge-vm-root-password|default(nsx_password) }}"
-            root_password: "{{ edge-vm-root-password|default(nsx_password) }}"
+            cli_password: "{{ edge_vm_root_password|default(nsx_password) }}"
+            root_password: "{{ edge_vm_root_password|default(nsx_password) }}"
           vm_deployment_config:
             placement_type: VsphereDeploymentConfig
             vc_name: "{{ item.vcenter }}"
