--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -450,8 +450,8 @@
             vc_name: "{{ item.vcenter }}"
             vc_username: "{{ vcenter_user}}"
             vc_password: "{{ vcenter_pass }}"        
-            data_networks:
-            - "{{ item.edge_vm_mgmt_pg }}"
+            data_networks: "{{item.edge_vm_networks}}"
+            # - "{{ item.edge_vm_mgmt_pg }}"
             # - "{{ vds.uplink2_pg }}"
             management_network: "{{ item.edge_vm_mgmt_pg}}"
             management_port_subnets:
@@ -467,4 +467,4 @@
 
       state: present
     loop: "{{system_fabric|json_query('edge_transp_nodes[*]')}}"
-    when: (item.edge_name is defined) and (item.edge_vm_fqdn is defined) and (item.edge_vsphere_cluster is defined) and (item.edge_vm_mgmt_ip is defined) and (item.edge_vm_mgmt_pg is defined)
+    when: (item.edge_name is defined) and (item.edge_vm_fqdn is defined) and (item.edge_vsphere_cluster is defined) and (item.edge_vm_mgmt_ip|ipaddr('address/prefix')) and (item.edge_vm_mgmt_pg is defined) and (item.edge_vm_networks is defined)
