--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -410,68 +410,67 @@
       content:
     register: nsxtm_ntp
 
-  - name: Create edge VMs
-    nsxt_transport_nodes:
-      hostname: "{{nsxt_ip}}"
-      username: "{{nsx_username}}"
-      password: "{{nsx_password}}"
-      validate_certs: False
-      display_name: "{{ item.edge_name }}"
-      host_switch_spec:
-        resource_type: StandardHostSwitchSpec
-        host_switches:
-        - host_switch_profiles:
-          - name: "UplinkProfl-{{item.uplink_profile}}"
-            type: "UplinkHostSwitchProfile"                
-          host_switch_name: "NSXT-NVDS"
-          host_switch_mode: "STANDARD"
-          # transport_zone_endpoints:
-          # - transport_zone_name: "TZ_Overlay"
-          # - transport_zone_name: "TZ_Vlan"
-          is_migrate_pnics: "False"
-          pnics: "{{item.nics}}"
-          ip_assignment_spec:
-            resource_type: "StaticIpPoolSpec"
-            ip_pool_name: "NSX_TEP_POOL"
-      transport_zone_endpoints:
-      - transport_zone_name: "TZ_Overlay"
-      - transport_zone_name: "TZ_Vlan"
-      node_deployment_info:
-        resource_type: "EdgeNode"
-        display_name: "{{item.edge_name}}"
-        ip_addresses:
-        node_settings:
-          dns_servers: "{{nsxtm_dns.body.name_servers}}"
-          enable_ssh: True
-          ntp_servers: "{{nsxtm_ntp.body.service_properties.servers}}"
-        deployment_config:
-          form_factor: "{{item.edge_vm_size|upper}}"
-          node_user_settings:
-            cli_password: "{{ edge_vm_root_password|default(nsx_password) }}"
-            root_password: "{{ edge_vm_root_password|default(nsx_password) }}"
-          vm_deployment_config:
-            placement_type: VsphereDeploymentConfig
-            vc_name: "{{ item.vcenter }}"
-            vc_username: "{{ vcenter_user}}"
-            vc_password: "{{ vcenter_pass }}"        
-            data_networks: "{{item.edge_vm_networks}}"
-            # - "{{ item.edge_vm_mgmt_pg }}"
-            # - "{{ vds.uplink2_pg }}"
-            management_network: "{{ item.edge_vm_mgmt_pg}}"
-            management_port_subnets:
-            - ip_addresses:
-              - "{{ item.edge_vm_mgmt_ip|ipaddr('address') }}"
-              prefix_length: "{{ item.edge_vm_mgmt_ip|ipaddr('prefix') }}"
-            default_gateway_addresses: 
-            - "{{item.edge_vm_ip_gateway|ipaddr}}"
-            hostname: "{{ item.edge_name}}"
-            compute: "{{ item.edge_vsphere_cluster }}"
-            storage: "{{ item.edge_vm_datastore }}"
-            # host: "{{ edge_node1_vesxi }}"        
-
-      state: present
-    loop: "{{system_fabric|json_query('edge_transp_nodes[*]')}}"
-    when: (item.edge_name is defined) and (item.edge_vm_fqdn is defined) and (item.edge_vsphere_cluster is defined) and (item.edge_vm_mgmt_ip|ipaddr('address/prefix')) and (item.edge_vm_mgmt_pg is defined) and (item.edge_vm_networks is defined)
+  # - name: Create edge VMs
+  #   nsxt_transport_nodes:
+  #     hostname: "{{nsxt_ip}}"
+  #     username: "{{nsx_username}}"
+  #     password: "{{nsx_password}}"
+  #     validate_certs: False
+  #     display_name: "{{ item.edge_name }}"
+  #     host_switch_spec:
+  #       resource_type: StandardHostSwitchSpec
+  #       host_switches:
+  #       - host_switch_profiles:
+  #         - name: "UplinkProfl-{{item.uplink_profile}}"
+  #           type: "UplinkHostSwitchProfile"                
+  #         host_switch_name: "NSXT-NVDS"
+  #         host_switch_mode: "STANDARD"
+  #         # transport_zone_endpoints:
+  #         # - transport_zone_name: "TZ_Overlay"
+  #         # - transport_zone_name: "TZ_Vlan"
+  #         is_migrate_pnics: "False"
+  #         pnics: "{{item.nics}}"
+  #         ip_assignment_spec:
+  #           resource_type: "StaticIpPoolSpec"
+  #           ip_pool_name: "NSX_TEP_POOL"
+  #     transport_zone_endpoints:
+  #     - transport_zone_name: "TZ_Overlay"
+  #     - transport_zone_name: "TZ_Vlan"
+  #     node_deployment_info:
+  #       resource_type: "EdgeNode"
+  #       display_name: "{{item.edge_name}}"
+  #       ip_addresses:
+  #       node_settings:
+  #         dns_servers: "{{nsxtm_dns.body.name_servers}}"
+  #         enable_ssh: True
+  #         ntp_servers: "{{nsxtm_ntp.body.service_properties.servers}}"
+  #       deployment_config:
+  #         form_factor: "{{item.edge_vm_size|upper}}"
+  #         node_user_settings:
+  #           cli_password: "{{ edge_vm_root_password|default(nsx_password) }}"
+  #           root_password: "{{ edge_vm_root_password|default(nsx_password) }}"
+  #         vm_deployment_config:
+  #           placement_type: VsphereDeploymentConfig
+  #           vc_name: "{{ item.vcenter }}"
+  #           vc_username: "{{ vcenter_user}}"
+  #           vc_password: "{{ vcenter_pass }}"        
+  #           data_networks: "{{item.edge_vm_networks}}"
+  #           # - "{{ item.edge_vm_mgmt_pg }}"
+  #           # - "{{ vds.uplink2_pg }}"
+  #           management_network: "{{ item.edge_vm_mgmt_pg}}"
+  #           management_port_subnets:
+  #           - ip_addresses:
+  #             - "{{ item.edge_vm_mgmt_ip|ipaddr('address') }}"
+  #             prefix_length: "{{ item.edge_vm_mgmt_ip|ipaddr('prefix') }}"
+  #           default_gateway_addresses: 
+  #           - "{{item.edge_vm_ip_gateway|ipaddr}}"
+  #           hostname: "{{ item.edge_name}}"
+  #           compute: "{{ item.edge_vsphere_cluster }}"
+  #           storage: "{{ item.edge_vm_datastore }}"
+  #           # host: "{{ edge_node1_vesxi }}"        
+  #     state: present
+  #   loop: "{{system_fabric|json_query('edge_transp_nodes[*]')}}"
+  #   when: (item.edge_name is defined) and (item.edge_vm_fqdn is defined) and (item.edge_vsphere_cluster is defined) and (item.edge_vm_mgmt_ip|ipaddr('address/prefix')) and (item.edge_vm_mgmt_pg is defined) and (item.edge_vm_networks is defined)
 
   - name: Create NSX-T Edge clusters and assign edges to them
     nsxt_edge_clusters:
