--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -4,8 +4,6 @@
   connection: local
   gather_facts: no
   vars:
-    uplinkprofs:
-      - {"name": "actv-actv-4nics", "policy": "LOADBALANCE_SRCID", "active-uplinks": [1,2,3,4] }
 
 
   tasks:
@@ -24,32 +22,32 @@
       path: ./data/fragments
       state: directory
 
-  # - name: Copy & prepare the uploaded input Excel file
-  #   copy:
-  #     src: "{{nsx_filepath}}/"
-  #     dest: "./data/{{nsx_filename}}"
+  - name: Copy & prepare the uploaded input Excel file
+    copy:
+      src: "{{nsx_filepath}}/"
+      dest: "./data/{{nsx_filename}}"
 
-  # - name: Initialize the excel file to use the input data
-  #   xls_to_facts:
-  #     src: "./data/{{nsx_filename}}"
-  #   tags:
-  #     - excel
+  - name: Initialize the excel file to use the input data
+    xls_to_facts:
+      src: "./data/{{nsx_filename}}"
+    tags:
+      - excel
 
-  # - name: Create system fabric model from spreadsheet data
-  #   template:
-  #     src: "./templates/{{item}}_system_fabric.j2"
-  #     dest: "./data/fragments/{{item}}_system_fabric.yml"
-  #   with_items:
-  #     - "01"
+  - name: Create system fabric model from spreadsheet data
+    template:
+      src: "./templates/{{item}}_system_fabric.j2"
+      dest: "./data/fragments/{{item}}_system_fabric.yml"
+    with_items:
+      - "01"
 
-  # - name: Assemble fabric model
-  #   assemble:
-  #     src: "./data/fragments/"
-  #     dest: "./data/system_fabric.yml"
+  - name: Assemble fabric model
+    assemble:
+      src: "./data/fragments/"
+      dest: "./data/system_fabric.yml"
 
-  # - name: load data
-  #   include_vars:
-  #     file: "./data/system_fabric.yml"
+  - name: load data
+    include_vars:
+      file: "./data/system_fabric.yml"
 
 #   - name: Provision list of compute managers
 #     nsxt_fabric_compute_managers:
@@ -509,5 +507,4 @@
       nested_nsx: "false"
       state: "present"
       uplink_teaming_policy_names: "[LEFT-TOR-Router, RIGHT-TOR-Router]"
-    loop: "{{system_fabric|json_query('edge_transp_nodes[*]')}}"
-
+    when: system_fabric|json_query('edge_transp_nodes[*]').length != 0
