--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -507,4 +507,4 @@
       nested_nsx: "false"
       state: "present"
       uplink_teaming_policy_names: "[LEFT-TOR-Router, RIGHT-TOR-Router]"
-    when: system_fabric.edge_transp_nodes.length != 0
+    when: system_fabric.edge_transp_nodes|length != 0
