--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -536,5 +536,5 @@
         hybrid: False
         local_egress: False
         uplink_teaming_policy_name: "{{ item.named_teaming }}"
-    loop: "{{l2_segmennts}}"
+    loop: "{{l2_segments}}"
     when: l2_segments is defined and item.named_teaming is defined
