--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -535,8 +535,9 @@
         connectivity: "ON"
         hybrid: False
         local_egress: False
-        uplink_teaming_policy_name: "{{ item.named_teaming }}"
+        uplink_teaming_policy_name: "{{ item.named_teaming|default(omit) }}"
     loop: "{{l2_segments}}"
-    when: l2_segments is defined and item.named_teaming is defined
+#    when: l2_segments is defined and item.named_teaming is defined
+    when: l2_segments is defined and item.Transport_zone is defined    
     vars: 
       ansible_python_interpreter: /usr/bin/python3    
