--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -94,6 +94,8 @@
           "username": "admin",
           "password_change_frequency": 0
         }
+    vars: 
+      ansible_python_interpreter: /usr/bin/python3  
 
 
 
