--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -346,21 +346,21 @@
   #   when: (item.switch_type == 'VDS') and (item.transport_node_profile_name is defined) and (item.nics is defined) and (item.vcenter) and (item.cluster_name is defined) and (item.vds_name is defined)
 ####################
 
-  - name: Create transport node collection/Cluster prep
-    nsxt_transport_node_collections:
-      hostname: "{{nsxt_ip}}"
-      username: "{{nsx_username}}"
-      password: "{{nsx_password}}"
-      validate_certs: False
-      display_name: "TranspNode-{{item.cluster_name}}"
-      resource_type: "TransportNodeCollection"
-      description: "Transport Node {{item.cluster_name}}"
-      compute_manager_name: "{{item.vcenter}}"
-      cluster_name: "{{item.cluster_name}}"
-      transport_node_profile_name: "{{ item.transport_node_profile_name }}"
-      state: present
-    loop: "{{system_fabric|json_query('compute_transp_nodes[*]')}}"
-    when: (item.cluster_name is defined and item.cluster_name !='' ) and (item.transport_node_profile_name is defined) and (item.nics is defined)
+  # - name: Create transport node collection/Cluster prep
+  #   nsxt_transport_node_collections:
+  #     hostname: "{{nsxt_ip}}"
+  #     username: "{{nsx_username}}"
+  #     password: "{{nsx_password}}"
+  #     validate_certs: False
+  #     display_name: "TranspNode-{{item.cluster_name}}"
+  #     resource_type: "TransportNodeCollection"
+  #     description: "Transport Node {{item.cluster_name}}"
+  #     compute_manager_name: "{{item.vcenter}}"
+  #     cluster_name: "{{item.cluster_name}}"
+  #     transport_node_profile_name: "{{ item.transport_node_profile_name }}"
+  #     state: present
+  #   loop: "{{system_fabric|json_query('compute_transp_nodes[*]')}}"
+  #   when: (item.cluster_name is defined and item.cluster_name !='' ) and (item.transport_node_profile_name is defined) and (item.nics is defined)
 
 
   - name: Create Single ESXi Transport Nodes with N-VDS
@@ -534,18 +534,18 @@
           host_switch_name: "NSXT-NVDS"
           host_switch_mode: "STANDARD"
           transport_zone_endpoints:
-          - transport_zone_name: "TZ_Overlay"
-          - transport_zone_name: "TZ_Vlan"
-          - transport_zone_name: "TZ_Edge_Peering_Vlan"
+          # - transport_zone_name: "TZ_Overlay"
+          # - transport_zone_name: "TZ_Vlan"
+          # - transport_zone_name: "TZ_Edge_Peering_Vlan"
           is_migrate_pnics: "False"
           pnics: "{{item.nics}}"
           ip_assignment_spec:
             resource_type: "StaticIpPoolSpec"
             ip_pool_name: "NSX_TEP_POOL"
       transport_zone_endpoints:
-      # - transport_zone_name: "TZ_Overlay"
-      # - transport_zone_name: "TZ_Vlan"
-      # - transport_zone_name: "TZ_Edge_Peering_Vlan"
+      - transport_zone_name: "TZ_Overlay"
+      - transport_zone_name: "TZ_Vlan"
+      - transport_zone_name: "TZ_Edge_Peering_Vlan"
       node_deployment_info:
         resource_type: "EdgeNode"
         display_name: "{{item.edge_name}}"
