--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -346,21 +346,21 @@
   #   when: (item.switch_type == 'VDS') and (item.transport_node_profile_name is defined) and (item.nics is defined) and (item.vcenter) and (item.cluster_name is defined) and (item.vds_name is defined)
 ####################
 
-  # - name: Create transport node collection/Cluster prep
-  #   nsxt_transport_node_collections:
-  #     hostname: "{{nsxt_ip}}"
-  #     username: "{{nsx_username}}"
-  #     password: "{{nsx_password}}"
-  #     validate_certs: False
-  #     display_name: "TranspNode-{{item.cluster_name}}"
-  #     resource_type: "TransportNodeCollection"
-  #     description: "Transport Node {{item.cluster_name}}"
-  #     compute_manager_name: "{{item.vcenter}}"
-  #     cluster_name: "{{item.cluster_name}}"
-  #     transport_node_profile_name: "{{ item.transport_node_profile_name }}"
-  #     state: present
-  #   loop: "{{system_fabric|json_query('compute_transp_nodes[*]')}}"
-  #   when: (item.cluster_name is defined and item.cluster_name !='' ) and (item.transport_node_profile_name is defined) and (item.nics is defined)
+  - name: Create transport node collection/Cluster prep
+    nsxt_transport_node_collections:
+      hostname: "{{nsxt_ip}}"
+      username: "{{nsx_username}}"
+      password: "{{nsx_password}}"
+      validate_certs: False
+      display_name: "TranspNode-{{item.cluster_name}}"
+      resource_type: "TransportNodeCollection"
+      description: "Transport Node {{item.cluster_name}}"
+      compute_manager_name: "{{item.vcenter}}"
+      cluster_name: "{{item.cluster_name}}"
+      transport_node_profile_name: "{{ item.transport_node_profile_name }}"
+      state: present
+    loop: "{{system_fabric|json_query('compute_transp_nodes[*]')}}"
+    when: (item.cluster_name is defined and item.cluster_name !='' ) and (item.transport_node_profile_name is defined) and (item.nics is defined)
 
 
   - name: Create Single ESXi Transport Nodes with N-VDS
