--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -4,7 +4,16 @@
   connection: local
   gather_facts: no
   vars:
-
+    uplink_prof_list:
+      - {"name": "compute-actv-actv-4nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "UPLINK1", uplink_type: "PNIC"},{uplink_name: "UPLINK2", uplink_type: "PNIC"},{uplink_name: "UPLINK3", uplink_type: "PNIC"},{uplink_name: "UPLINK4", uplink_type: "PNIC"}]} }
+      - {"name": "compute-actv-actv-6nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "UPLINK1", uplink_type: "PNIC"},{uplink_name: "UPLINK2", uplink_type: "PNIC"},{uplink_name: "UPLINK3", uplink_type: "PNIC"},{uplink_name: "UPLINK4", uplink_type: "PNIC"},{uplink_name: "UPLINK5", uplink_type: "PNIC"},{uplink_name: "UPLINK6", uplink_type: "PNIC"}]} }
+      - {"name": "compute-actv-actv-2nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "UPLINK1", uplink_type: "PNIC"},{uplink_name: "UPLINK2", uplink_type: "PNIC"}]} }
+      - {"name": "compute-actv-stdby-2nics", 'tm': {"policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "UPLINK1", uplink_type: "PNIC"}], "standby_list": [{uplink_name: "UPLINK2", uplink_type: "PNIC"}]} }
+      - {"name": "compute-actv-stdby-1nic", 'tm': {"policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "UPLINK1", uplink_type: "PNIC"}] } }
+      - {"name": "edge-multi-TEP-2nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "EDG-UPLINK1", uplink_type: "PNIC"},{uplink_name: "EDG-UPLINK2", uplink_type: "PNIC"}]}, 'ntm': [{"name": "LEFT-TOR-Router", "policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "EDG-UPLINK1", uplink_type: "PNIC"}]}, {"name": "RIGHT-TOR-Router", "policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "EDG-UPLINK2", uplink_type: "PNIC"}]} ] }
+      - {"name": "edge-single-TEP-2nics", 'tm': {"policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "EDG-UPLINK1", uplink_type: "PNIC"}],"standby_list": [{uplink_name: "EDG-UPLINK2", uplink_type: "PNIC"}]}, 'ntm': [{"name": "LEFT-TOR-Router", "policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "EDG-UPLINK1", uplink_type: "PNIC"}]} ] }
+      - {"name": "edge-multi-TEP-4nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "EDG-UPLINK1", uplink_type: "PNIC"},{uplink_name: "EDG-UPLINK2", uplink_type: "PNIC"}]}, 'ntm': [{"name": "LEFT-TOR-Router", "policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "EDG-UPLINK1", uplink_type: "PNIC"}]}, {"name": "RIGHT-TOR-Router", "policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "EDG-UPLINK2", uplink_type: "PNIC"}]}, {"name": "For-L2-Bridged-Vlans", "policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "EDG-UPLINK3", uplink_type: "PNIC"}]} ] }
+ 
 
   tasks:
 
@@ -115,14 +124,7 @@
           "username": "admin",
           "password_change_frequency": 0
         }
-    register: result
-    # until: result.json.result_count == 0
-    # retries: 180
-    # delay: 30
-    # when: 
-    #   - nsxlicensekey.stat.exists == true
-    #   - deploy_nsxt == true
-    #   - deploy_nsxt_edge == true
+
 
 
   - name: Create transport zone
@@ -198,7 +200,7 @@
 # #   #     ansible_python_interpreter: /usr/bin/python3
 
 
-  - name: create policy IP Pool
+  - name: create Transport TEP IP Pool (policy)
     nsxt_policy_ip_pool:
       hostname: "{{nsxt_ip}}"
       username: "{{nsx_username}}"
@@ -246,15 +248,15 @@
       teaming: "{{item.tm}}"
       transport_vlan: "{{overlay_vlan|default(0)}}"
       named_teamings: "{{item.ntm|default(omit)}}"
-    loop:  
-      - {"name": "compute-actv-actv-4nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "UPLINK1", uplink_type: "PNIC"},{uplink_name: "UPLINK2", uplink_type: "PNIC"},{uplink_name: "UPLINK3", uplink_type: "PNIC"},{uplink_name: "UPLINK4", uplink_type: "PNIC"}]} }
-      - {"name": "compute-actv-actv-6nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "UPLINK1", uplink_type: "PNIC"},{uplink_name: "UPLINK2", uplink_type: "PNIC"},{uplink_name: "UPLINK3", uplink_type: "PNIC"},{uplink_name: "UPLINK4", uplink_type: "PNIC"},{uplink_name: "UPLINK5", uplink_type: "PNIC"},{uplink_name: "UPLINK6", uplink_type: "PNIC"}]} }
-      - {"name": "compute-actv-actv-2nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "UPLINK1", uplink_type: "PNIC"},{uplink_name: "UPLINK2", uplink_type: "PNIC"}]} }
-      - {"name": "compute-actv-stdby-2nics", 'tm': {"policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "UPLINK1", uplink_type: "PNIC"}], "standby_list": [{uplink_name: "UPLINK2", uplink_type: "PNIC"}]} }
-      - {"name": "compute-actv-stdby-1nic", 'tm': {"policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "UPLINK1", uplink_type: "PNIC"}] } }
-      - {"name": "edge-multi-TEP-2nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "EDG-UPLINK1", uplink_type: "PNIC"},{uplink_name: "EDG-UPLINK2", uplink_type: "PNIC"}]}, 'ntm': [{"name": "LEFT-TOR-Router", "policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "EDG-UPLINK1", uplink_type: "PNIC"}]}, {"name": "RIGHT-TOR-Router", "policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "EDG-UPLINK2", uplink_type: "PNIC"}]} ] }
-      - {"name": "edge-single-TEP-2nics", 'tm': {"policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "EDG-UPLINK1", uplink_type: "PNIC"}],"standby_list": [{uplink_name: "EDG-UPLINK2", uplink_type: "PNIC"}]}, 'ntm': [{"name": "LEFT-TOR-Router", "policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "EDG-UPLINK1", uplink_type: "PNIC"}]} ] }
-      - {"name": "edge-multi-TEP-4nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "EDG-UPLINK1", uplink_type: "PNIC"},{uplink_name: "EDG-UPLINK2", uplink_type: "PNIC"}]}, 'ntm': [{"name": "LEFT-TOR-Router", "policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "EDG-UPLINK1", uplink_type: "PNIC"}]}, {"name": "RIGHT-TOR-Router", "policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "EDG-UPLINK2", uplink_type: "PNIC"}]}, {"name": "For-L2-Bridged-Vlans", "policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "EDG-UPLINK3", uplink_type: "PNIC"}]} ] }
+    loop: "{{uplink_prof_list}}"  
+      # - {"name": "compute-actv-actv-4nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "UPLINK1", uplink_type: "PNIC"},{uplink_name: "UPLINK2", uplink_type: "PNIC"},{uplink_name: "UPLINK3", uplink_type: "PNIC"},{uplink_name: "UPLINK4", uplink_type: "PNIC"}]} }
+      # - {"name": "compute-actv-actv-6nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "UPLINK1", uplink_type: "PNIC"},{uplink_name: "UPLINK2", uplink_type: "PNIC"},{uplink_name: "UPLINK3", uplink_type: "PNIC"},{uplink_name: "UPLINK4", uplink_type: "PNIC"},{uplink_name: "UPLINK5", uplink_type: "PNIC"},{uplink_name: "UPLINK6", uplink_type: "PNIC"}]} }
+      # - {"name": "compute-actv-actv-2nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "UPLINK1", uplink_type: "PNIC"},{uplink_name: "UPLINK2", uplink_type: "PNIC"}]} }
+      # - {"name": "compute-actv-stdby-2nics", 'tm': {"policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "UPLINK1", uplink_type: "PNIC"}], "standby_list": [{uplink_name: "UPLINK2", uplink_type: "PNIC"}]} }
+      # - {"name": "compute-actv-stdby-1nic", 'tm': {"policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "UPLINK1", uplink_type: "PNIC"}] } }
+      # - {"name": "edge-multi-TEP-2nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "EDG-UPLINK1", uplink_type: "PNIC"},{uplink_name: "EDG-UPLINK2", uplink_type: "PNIC"}]}, 'ntm': [{"name": "LEFT-TOR-Router", "policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "EDG-UPLINK1", uplink_type: "PNIC"}]}, {"name": "RIGHT-TOR-Router", "policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "EDG-UPLINK2", uplink_type: "PNIC"}]} ] }
+      # - {"name": "edge-single-TEP-2nics", 'tm': {"policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "EDG-UPLINK1", uplink_type: "PNIC"}],"standby_list": [{uplink_name: "EDG-UPLINK2", uplink_type: "PNIC"}]}, 'ntm': [{"name": "LEFT-TOR-Router", "policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "EDG-UPLINK1", uplink_type: "PNIC"}]} ] }
+      # - {"name": "edge-multi-TEP-4nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "EDG-UPLINK1", uplink_type: "PNIC"},{uplink_name: "EDG-UPLINK2", uplink_type: "PNIC"}]}, 'ntm': [{"name": "LEFT-TOR-Router", "policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "EDG-UPLINK1", uplink_type: "PNIC"}]}, {"name": "RIGHT-TOR-Router", "policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "EDG-UPLINK2", uplink_type: "PNIC"}]}, {"name": "For-L2-Bridged-Vlans", "policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "EDG-UPLINK3", uplink_type: "PNIC"}]} ] }
 
   #   debug:
   #     msg: "{{item.0}}"
@@ -473,6 +475,8 @@
   #     content:
   #   register: list_tn
 
+###################################### Prep for Edge VM 
+
   - name: Save NSX-T DNS server IP as variable
     nsxt_rest:
       hostname: "{{nsxt_ip}}"
@@ -495,6 +499,48 @@
       content:
     register: nsxtm_ntp
 
+  - name: Update static Edge TEP Uplink Profile in case of shared compute cluster 
+    nsxt_uplink_profiles:
+      hostname: "{{nsxt_ip}}"
+      username: "{{nsx_username}}"
+      password: "{{nsx_password}}"
+      validate_certs: False
+      display_name: "UplinkProfl-{{item.name}}"
+      # mtu: 1600
+      resource_type: "UplinkHostSwitchProfile"
+      state: "present"
+      teaming: "{{item.tm}}"
+      transport_vlan: "{{edge_overlay_vlan|default(overlay_vlan)}}"
+    loop: "{{uplink_prof_list}}"
+    when: (shared_compute|lower == 'yes') and (edge_overlay_vlan != 0) and (edge_overlay_subnet is defined) and ('edge' in item.name) 
+
+  - name: Create Edge overlay TEP IP Pool in case of shared compute cluster (policy)
+    nsxt_policy_ip_pool:
+      hostname: "{{nsxt_ip}}"
+      username: "{{nsx_username}}"
+      password: "{{nsx_password}}"
+      validate_certs: False
+      id: EDGE_TEP_POOL_SHARED_COMPUTE
+      display_name: EDGE_TEP_POOL_SHARED_COMPUTE
+      state: "present"
+      pool_static_subnets:      
+        [
+        {
+          "display_name": "TEP_subnet_{{edge_overlay_subnet|ipaddr('network')}}",
+          "state": "present",
+          "allocation_ranges": [
+            {
+              "start": "{{edge_overlay_subnet|ipaddr('3')|ipaddr('address')}}",
+              "end": "{{edge_overlay_subnet|ipaddr('-3')|ipaddr('address')}}"
+            }
+          ],
+          "gateway_ip": "{{edge_overlay_subnet|ipaddr('address')}}",
+          "cidr": "{{edge_overlay_subnet|ipaddr('network/prefix')}}"
+        }
+       ]
+    when: (shared_compute|lower == 'yes') and (edge_overlay_vlan != 0) and (edge_overlay_subnet is defined)      
+    vars: 
+      ansible_python_interpreter: /usr/bin/python3
 
   - name: Add named teaming policies to Edge Vlan TZ
     nsxt_transport_zones:
@@ -516,6 +562,7 @@
         - "RIGHT-TOR-Router"
     when: system_fabric.edge_transp_nodes is defined
 
+###################################### Deploying Edge VM    
 
   - name: Create edge VMs
     nsxt_transport_nodes:
@@ -535,8 +582,9 @@
             host_switch_type: "NVDS"
             ip_assignment_spec:
               resource_type: "StaticIpPoolSpec"
-              ip_pool_name: "NSX_TEP_POOL"
-            pnics: "{{item.nics}}"
+              # ip_pool_name: "NSX_TEP_POOL"
+              ip_pool_name: "{% if (shared_compute|lower == 'yes') and (edge_overlay_vlan != 0) and (edge_overlay_subnet|ipaddr)%}EDGE_TEP_POOL_SHARED_COMPUTE{%else%}NSX_TEP_POOL{%endif%}"
+              pnics: "{{item.nics}}"
             transport_zone_endpoints:
               - transport_zone_name: "TZ_Overlay"
               - transport_zone_name: "TZ_Vlan"
@@ -570,7 +618,8 @@
             placement_type: "VsphereDeploymentConfig"
             reservation_info:
               memory_reservation:
-                reservation_percentage: 0            
+                reservation_percentage: 0
+              cpu_reservation: {"reservation_in_shares":"LOW_PRIORITY"}          
             vc_name: "{{ item.vcenter }}"
             vc_username: "{{ vcenter_user}}"
             vc_password: "{{ vcenter_pass }}"        
@@ -581,73 +630,6 @@
       state: present
     loop: "{{system_fabric|json_query('edge_transp_nodes[*]')}}"
     when: (item.edge_name is defined) and (item.edge_vm_fqdn is defined) and (item.edge_vsphere_cluster is defined) and (item.edge_vm_mgmt_ip|ipaddr('address/prefix')) and (item.edge_vm_mgmt_pg is defined) and (item.edge_vm_networks is defined)
-
-
-  # - name: Create edge VMs
-  #   nsxt_transport_nodes:
-  #     hostname: "{{nsxt_ip}}"
-  #     username: "{{nsx_username}}"
-  #     password: "{{nsx_password}}"
-  #     validate_certs: False
-  #     display_name: "{{ item.edge_name }}"
-  #     host_switch_spec:
-  #       resource_type: StandardHostSwitchSpec
-  #       host_switches:
-  #       - host_switch_profiles:
-  #         - name: "UplinkProfl-{{item.uplink_profile}}"
-  #           type: "UplinkHostSwitchProfile"                
-  #         host_switch_name: "NSXT-NVDS"
-  #         host_switch_mode: "STANDARD"
-  #         transport_zone_endpoints:
-  #           - transport_zone_name: "TZ_Overlay"
-  #           - transport_zone_name: "TZ_Vlan"
-  #           - transport_zone_name: "TZ_Edge_Peering_Vlan"
-  #         is_migrate_pnics: "False"
-  #         pnics: "{{item.nics}}"
-  #         ip_assignment_spec:
-  #           resource_type: "StaticIpPoolSpec"
-  #           ip_pool_name: "NSX_TEP_POOL"
-  #     # transport_zone_endpoints:
-  #     # - transport_zone_name: "TZ_Overlay"
-  #     # - transport_zone_name: "TZ_Vlan"
-  #     # - transport_zone_name: "TZ_Edge_Peering_Vlan"
-  #     node_deployment_info:
-  #       resource_type: "EdgeNode"
-  #       display_name: "{{item.edge_name}}"
-  #       ip_addresses:
-  #       node_settings:
-  #         dns_servers: "{{nsxtm_dns.body.name_servers}}"
-  #         enable_ssh: True
-  #         ntp_servers: "{{nsxtm_ntp.body.service_properties.servers}}"
-  #       deployment_config:
-  #         form_factor: "{{item.edge_vm_size|upper}}"
-  #         node_user_settings:
-  #           cli_password: "{{ edge_vm_root_password|default(nsx_password) }}"
-  #           root_password: "{{ edge_vm_root_password|default(nsx_password) }}"
-  #         vm_deployment_config:
-  #           placement_type: VsphereDeploymentConfig
-  #           vc_name: "{{ item.vcenter }}"
-  #           vc_username: "{{ vcenter_user}}"
-  #           vc_password: "{{ vcenter_pass }}"        
-  #           data_networks: "{{item.edge_vm_networks}}"
-
-  #           management_network: "{{ item.edge_vm_mgmt_pg}}"
-  #           management_port_subnets:  
-  #           - ip_addresses:
-  #             - "{{ item.edge_vm_mgmt_ip|ipaddr('address') }}"
-  #             prefix_length: "{{ item.edge_vm_mgmt_ip|ipaddr('prefix') }}"
-  #           default_gateway_addresses: 
-  #           - "{{item.edge_vm_ip_gateway|ipaddr}}"
-  #           hostname: "{{ item.edge_name}}"
-  #           compute: "{{ item.edge_vsphere_cluster }}"
-  #           storage: "{{ item.edge_vm_datastore }}"
-  #           reservation_info:
-  #             memory_reservation:
-  #               reservation_percentage: 0
-  #           # host: "{{ edge_node1_vesxi }}"        
-  #     state: present
-  #   loop: "{{system_fabric|json_query('edge_transp_nodes[*]')}}"
-  #   when: (item.edge_name is defined) and (item.edge_vm_fqdn is defined) and (item.edge_vsphere_cluster is defined) and (item.edge_vm_mgmt_ip|ipaddr('address/prefix')) and (item.edge_vm_mgmt_pg is defined) and (item.edge_vm_networks is defined)
 
 
   - name: Create NSX-T Edge clusters and assign edges to them
