--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -568,9 +568,9 @@
     when: system_fabric.edge_transp_nodes is defined
 
   - debug:
-      - msg: "{{shared_compute|lower}}"
-      - msg: "{{edge_overlay_vlan}}"
-      - msg: "{{edge_overlay_subnet}}"
+      msg: "{{shared_compute|lower}}"
+      msg: "{{edge_overlay_vlan}}"
+      msg: "{{edge_overlay_subnet}}"
 
 ###################################### Deploying Edge VM    
 ######################################
