--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -568,7 +568,7 @@
     when: system_fabric.edge_transp_nodes is defined
 
   - debug:
-      msg: "{{shared_compute|str}}"
+      msg: "{{shared_compute|string}}"
   - debug:
       msg: "{{edge_overlay_vlan|int}}"
   - debug:
