--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -89,7 +89,7 @@
 
   - name: test to see var content
     debug:
-      msg: "{{nsx_password}}"
+      msg: "{{mono|default(nsx_password)}}"
 
 
   # - name: Disable password expiration for admin user
