--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -562,7 +562,7 @@
             ip_assignment_spec:
               resource_type: "StaticIpPoolSpec"
               # ip_pool_name: "NSX_TEP_POOL"
-              ip_pool_name: "{{EDGE_TEP_POOL_SHARED_COMPUTE|default(NSX_TEP_POOL)}"
+              ip_pool_name: "{{EDGE_TEP_POOL_SHARED_COMPUTE|default(NSX_TEP_POOL)}}"
             pnics: "{{item.nics}}"
             transport_zone_endpoints:
               - transport_zone_name: "TZ_Overlay"
